--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "bcrypt": "^5.1.0",
+    "dataloader": "^2.2.2",
     "graphql": "^16.7.1",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
